Fixed horizontal scroll on feature header @ 500px width

--- a/components/landing/landing-feature.less
+++ b/components/landing/landing-feature.less
@@ -20,6 +20,10 @@ header .feature-header {
         padding-bottom: 30px;
         text-align    : center;
 
+        @media @tablet {
+            width: 480px;
+        }
+
         @media @mobile {
             width: 90%;
         }
